--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body> 
       <left><h1> Мой профиль:
-<body bgcolor = “#F5DEB3”>
+<body bgcolor = “#F08080”>
 Толстых Дарья</h1></left>
       <left><img alt="Это я" width="55%" src="me.jpg"></left>
  <h2>S A K U R A :</h2>
