--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Моя личная страничка</title>
     </head>
     <body> 
-      <body bgcolor = "FFDAB9”>
+      <body bgcolor = "pink”>
       <left><h1> Мой профиль:
 Толстых Дарья</h1></left>
       <left><img alt="Это я" width="55%" src="me.jpg"></left>
